# Bot-Plattform

./: .gitignore  LICENCE.md  README.md  pyproject.toml  setup.py  test.db  testapp1.py  testapp2.py
llm-frontend/: package-lock.json  package.json
llm-frontend/src/: App.css  App.jsx
llm-frontend/src/components/: Bots.jsx  Chat.jsx  Login.jsx
src/app/: database.py  main.py  schemas.py
src/app/api/: auth.py  bots.py  chat.py  groups.py  users.py
src/app/core/: config.py  security.py
src/app/crud/: bot.py  user.py
src/app/models/: bot.py  user.py
