[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["markus <datamastery87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
databases = "^0.9.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.112.0"
pydantic-settings = "^2.4.0"
bcrypt = "=4.0.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
